# CSV-Plotter

./: CMakeLists.txt  main.cpp  readme.md  todo.txt
includes/app/: app.cpp  app.h
includes/constants/: windowConstants.h
includes/csvParser/: csvParser.cpp  csvParser.h
includes/graphTools/: graphTools.cpp  graphTools.h
includes/objects/: graph.cpp  graph.h  hoverableText.cpp  hoverableText.h  sidePanel.cpp  sidePanel.h  timeline.cpp  timeline.h
includes/random/: random.cpp  random.h
resources/: sat_realtime_telemetry_small.csv
